--- a/composer.json
+++ b/composer.json
@@ -5,7 +5,9 @@
 	"license": "MIT",
 	"type": "project",
 	"require": {
-		"laravel/framework": "4.2.*"
+		"laravel/framework": "4.2.*",
+		"erusev/parsedown": "~1.1",
+    	"ezyang/htmlpurifier": "4.6.*"
 	},
 	"autoload": {
 		"classmap": [
