had to add more directories to the json file

--- a/composer.json
+++ b/composer.json
@@ -11,10 +11,13 @@
 		"classmap": [
 			"app/commands",
 			"app/controllers",
-			"app/models",
 			"app/database/migrations",
 			"app/database/seeds",
-			"app/tests/TestCase.php"
+			"app/exceptions",
+			"app/models",
+			"app/services",
+			"app/tests/TestCase.php",
+			"app/validators"
 		]
 	},
 	"scripts": {
